# cdd

./: .gitignore  CODEBASE.md  LICENSE  README.md  pyproject.toml
docs/backlog/: roadmap.json
docs/retros/: sprint-1.json  sprint-2.json
docs/reviews/: v0.1-review-architect-r2.md  v0.1-review-architect.md  v0.1-review-code-r2.md  v0.1-review-code.md  v0.1-review-r3-signoff.md
src/cdd/: __init__.py  __main__.py  log.py  loop.py  protocols.py  types.py
src/cdd/adapters/: __init__.py  text.py
src/cdd/generators/: __init__.py  echo.py
tests/: test_echo_generator.py  test_integration.py  test_log.py  test_loop.py  test_protocols.py  test_smoke.py  test_text_adapter.py  test_types.py
