[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cdd-loop"
version = "0.0.1"
description = "Critique-Driven Development: a methodology for AI-assisted creative work."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Sebastian Bryers" }]
keywords = [
  "ai",
  "methodology",
  "authoring",
  "critique-driven-development",
  "generative",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7", "types-PyYAML"]

[project.scripts]
cdd = "cdd.__main__:main"

[project.urls]
Homepage = "https://github.com/srbryers/cdd"
Issues = "https://github.com/srbryers/cdd/issues"
Repository = "https://github.com/srbryers/cdd"

[tool.hatch.build.targets.wheel]
packages = ["src/cdd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
